--- a/ansible/playbook-all_nodes-install_microk8s_snap.yml
+++ b/ansible/playbook-all_nodes-install_microk8s_snap.yml
@@ -27,6 +27,10 @@
           - 'microk8s'
         append: true
 
+    #
+    # microk8s addons
+    #
+
     - name: 'Check microk8s hostpath-storage status'
       ansible.builtin.command:
         cmd: 'microk8s status -a hostpath-storage'
@@ -39,6 +43,20 @@
         cmd: 'microk8s enable hostpath-storage'
       when:
         - not microk8s_hostpath_storage_status.stdout == "enabled"
+
+    - name: 'Check microk8s ingress status'
+      ansible.builtin.command:
+        cmd: 'microk8s status -a ingress'
+      changed_when: false
+      failed_when: false
+      register: microk8s_ingress_status
+
+    - name: 'Enable microk8s ingress addon'
+      ansible.builtin.command:
+        cmd: 'microk8s enable ingress'
+      when:
+        - not microk8s_ingress_status.stdout == "enabled"
+
     #
     # kubeconfig
     #
