--- a/ansible/playbook-vagrant.yml
+++ b/ansible/playbook-vagrant.yml
@@ -17,3 +17,6 @@
 
 - name: 'Run playbook-all_nodes-install_microk8s_snap.yml'
   ansible.builtin.import_playbook: playbook-all_nodes-install_microk8s_snap.yml
+
+- name: 'Run playbook-all_nodes-fetch_and_modify_kubeconfig.yml'
+  ansible.builtin.import_playbook: playbook-all_nodes-fetch_and_modify_kubeconfig.yml
