--- a/ansible/playbook-all_nodes-fetch_and_modify_kubeconfig.yml
+++ b/ansible/playbook-all_nodes-fetch_and_modify_kubeconfig.yml
@@ -4,46 +4,8 @@
   gather_facts: true
   become: true
 
-  tasks:
-
-    - name: 'Check if we already have a microk8s-kubeconfig file'
-      ansible.builtin.stat:
-        path: 'microk8s-kubeconfig'
-      delegate_to: 'localhost'
-      become: false
-      register: does_k3s_kubeconfig_exist
-
-    - name: 'Fetch kubeconfig to Ansible control node'
-      ansible.builtin.fetch:
-        src: '/var/snap/microk8s/current/credentials/client.config'
-        dest: 'microk8s-kubeconfig'
-        mode: '0600'
-        flat: true
-      when:
-        - 'not does_k3s_kubeconfig_exist.stat.exists | bool'
-
-    - name: 'Check if we now have a microk8s-kubeconfig file'
-      ansible.builtin.stat:
-        path: 'microk8s-kubeconfig'
-      delegate_to: 'localhost'
-      become: false
-      register: does_k3s_kubeconfig_exist_now
-
-    - name: 'Fix permissions on microk8s-kubeconfig'
-      ansible.builtin.file:
-        path: 'microk8s-kubeconfig'
-        mode: '0600'
-      delegate_to: 'localhost'
-      become: false
-      when:
-        - 'does_k3s_kubeconfig_exist_now.stat.exists | bool'
-
-    - name: 'Change server IP in kubeconfig file to external_ip (or the default IPv4 address)'
-      ansible.builtin.lineinfile:
-        path: 'microk8s-kubeconfig'
-        regexp: '(\s*)server: https://127.0.0.1:(.*)'
-        line: '\1server: https://{{ external_ip | default(hostvars[inventory_hostname]["ansible_default_ipv4"]["address"]) }}:\2'
-        backrefs: true
-      delegate_to: 'localhost'
-      become: false
-      ignore_errors: "{{ ansible_check_mode }}"
+  roles:
+    - name: 'johanneskastl.fetch_and_modify_a_kubeconfig_file'
+      local_file_name: 'microk8s-kubeconfig'
+      remote_file_path: '/var/snap/microk8s/current/credentials/client.config'
+      actual_IP_to_use: "{{ external_ip | default(hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}"
