ansible/playbook-all_nodes-fetch_and_modify_kubeconfig.yml: only use external_ip, as there is now a default in the role using the default IPv4 address

--- a/ansible/playbook-all_nodes-fetch_and_modify_kubeconfig.yml
+++ b/ansible/playbook-all_nodes-fetch_and_modify_kubeconfig.yml
@@ -8,4 +8,4 @@
     - name: 'johanneskastl.fetch_and_modify_a_kubeconfig_file'
       local_file_name: 'microk8s-kubeconfig'
       remote_file_path: '/var/snap/microk8s/current/credentials/client.config'
-      actual_IP_to_use: "{{ external_ip | default(hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}"
+      actual_IP_to_use: "{{ external_ip }}"
